# estructura

./: .env.dist  .gitignore  README.md  compose.yaml  flake.nix  taskfile.yml
core/: .gitignore  Dockerfile  entrypoint.sh  pyproject.toml
core/alembic/: env.py
core/alembic/versions/: 074697c174d3_.py
core/src/: __init__.py  args.py  container.py  enums.py  exceptions.py  local.py  main.py  models.py  schemas.py  settings.py
core/src/handlers/: cognito_post_confirmation.py  cognito_pre_sign_up.py  document_processing.py
core/src/mixins/: state_machine.py
core/src/repositories/: account.py  base.py  document.py  page.py  product.py  structure.py  user.py
core/src/routes/: accounts.py  documents.py  structures.py
core/src/services/: content_type_checker.py  current_cognito_claims.py  current_user.py  document.py  exception_handler.py  page_analysis.py  queuer.py  sampler.py  textract.py  uploader.py
core/tests/: conftest.py  factories.py  test_document.py  test_health.py  test_structure.py
core/tests/handlers/: test_cognito_post_confirmation.py  test_cognito_pre_sign_up.py  test_document_processing.py
infra/: acm.tf  api.tf  authorizer.tf  cloudfront.tf  cloudwatch.tf  cognito.tf  ecr.tf  iam.tf  lambda.tf  main.tf  network.tf  random.tf  rds.tf  s3.tf  secrets.tf  security-group.tf  sqs.tf  variables.tf
tasks/: secrets.sh
web/: lerna.json  nx.json  package-lock.json  package.json
